--- a/landing.hbs
+++ b/landing.hbs
@@ -68,9 +68,7 @@
         </ul>
         <ul class="navbar-nav ml-auto">
             {{{ cartLink }}}
-            <li class="nav-item" id="loginbutton">
-                <a href="#" class="nav-link" data-toggle="modal" data-target="#login">Login</a>
-            </li>
+            {{{ loginlogoutButton }}}
             <li class="nav-item" id="registerbutton">
                 <a href="#" class="nav-link" data-toggle="modal" data-target="#signup">Sign Up</a>
             </li>
@@ -87,7 +85,7 @@
                     &times;
                 </button>
             </div>
-            <form method="post" action="/login">
+            <form method="post" action="/login" id="login_form">
                 <div class="modal-body">
                     <div class="form-group">
                         <label for="username">Username</label>
@@ -102,7 +100,7 @@
                     <button type="button" class="btn btn-light" data-dismiss="modal">
                         Cancel
                     </button>
-                    <button type="button" value="Submit" onclick="form_submit1()" data-dismiss="modal" class="btn btn-pink">Login</button>
+                    <button onclick="form_submit1()" value="Submit" class="btn btn-pink">Login</button>
                 </div>
             </form>
         </div>
@@ -138,7 +136,7 @@
                     <button type="button" class="btn btn-light" data-dismiss="modal">
                         Cancel
                     </button>
-                    <button onclick="form_submit()" value="Submit" data-dismiss="modal" class="btn btn-pink">Register</button>
+                    <button onclick="form_submit()" value="Submit" class="btn btn-pink">Register</button>
                 </div>
             </form>
         </div>
@@ -328,7 +326,7 @@
             <div class="button"><a href="#"> View Details </a></div>
         </div>
     </div>
-
+    {{{popup}}}
 </div>
 <footer class="text-center mt-5">copyright, and stuff</footer>
 <!--Scripts-->
