--- a/landing.hbs
+++ b/landing.hbs
@@ -31,7 +31,7 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Today's Deals</a>
+                <a class="nav-link" href="http://localhost:8080/todays_deals">Today's Deals</a>
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
@@ -63,7 +63,7 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Today's Deals</a>
+                <a class="nav-link" href="http://localhost:8080/todays_deals">Today's Deals</a>
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
