Captch Function added

--- a/landing.hbs
+++ b/landing.hbs
@@ -95,6 +95,11 @@
                         <label for="loginpassword">Password</label>
                         <input name="password" type="password" class="form-control" id="loginpassword" placeholder="Enter password" required>
                     </div>
+                    <div class="form-group">
+                        <label for="vcode">Code</label>
+                        <input name="vcode" type="text" class="form-control" id="vcode" placeholder="Enter Verification Code" required>
+                    </div>
+                    {{{imgTag}}}
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-light" data-dismiss="modal">
