--- a/landing.hbs
+++ b/landing.hbs
@@ -8,8 +8,9 @@
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
-    <link rel="stylesheet" href="landing.css">
-    <title>Landing Page</title>
+    <link rel="stylesheet" href="css/landing.css">
+    <link rel="icon" href="img/HatLogo.png">
+    <title>nozamA Home</title>
 </head>
 
 <body class="parallax">
