--- a/landing.hbs
+++ b/landing.hbs
@@ -59,7 +59,7 @@
                 <div class="modal-body">
                     <div class="form-group">
                         <label for="username">Username</label>
-                        <input name="username" type="email" class="form-control" id="username" placeholder="Enter email" required>
+                        <input name="username" type="text" class="form-control" id="username" placeholder="Enter Username" required>
                     </div>
                     <div class="form-group">
                         <label for="loginpassword">Password</label>
@@ -95,7 +95,7 @@
                 <div class="modal-body">
                     <div class="form-group">
                         <label for="registeruser">Username</label>
-                        <input name="username" type="email" class="form-control" id="registeruser" placeholder="Enter email" required>
+                        <input name="username" type="text" class="form-control" id="registeruser" placeholder="Enter Username" required>
                     </div>
                     <div class="form-group">
                         <label for="registerpassword">Password</label>
