--- a/landing.hbs
+++ b/landing.hbs
@@ -13,7 +13,7 @@
     <title>nozamA Home</title>
 </head>
 
-<body class="parallax">
+<body>
 {{> fakeNavBar }}
 <!--Real Nav Bar-->
 <nav class="navbar navbar-expand-lg navbar-light navbg pt-0">
@@ -190,35 +190,35 @@
     <h2 class="mt-3">Groceries</h2>
     <div class="slider center">
         <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img mx-auto"
+            <img class="card-img mx-auto img-fluid"
                  src="img/products/chips.png" alt="" />
             <p class="title">Lays Chips</p>
             <div class="overlay"></div>
             <div class="button"><a href="#"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img mx-auto"
+            <img class="card-img mx-auto img-fluid"
                  src="img/products/coke.png" alt="" />
             <p class="title">Coca Cola</p>
             <div class="overlay"></div>
             <div class="button"><a href="#"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img mx-auto"
+            <img class="card-img mx-auto img-fluid"
                  src="img/products/eggs.png" alt="" />
             <p class="title">White Eggs</p>
             <div class="overlay"></div>
             <div class="button"><a href="#"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img mx-auto"
+            <img class="card-img mx-auto img-fluid"
                  src="img/products/butter.png" alt="" />
             <p class="title">Butter</p>
             <div class="overlay"></div>
             <div class="button"><a href="#"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img mx-auto"
+            <img class="card-img mx-auto img-fluid"
                  src="img/products/steak.png" alt="" />
             <p class="title">Kobe Steak</p>
             <div class="overlay"></div>
@@ -229,28 +229,28 @@
     <h2>Musical Instruments</h2>
     <div class="slider center">
         <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img-wide pt-5"
+            <img class="card-img-wide pt-5 img-fluid"
                  src="img/products/guitar.png" alt="" />
             <p class="title">Electric Guitar</p>
             <div class="overlay"></div>
             <div class="button"><a href="#"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img mx-auto"
+            <img class="card-img mx-auto img-fluid"
                  src="img/products/clarinet.png" alt="" />
             <p class="title">Clarinet</p>
             <div class="overlay"></div>
             <div class="button"><a href="#"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img mx-auto"
+            <img class="card-img mx-auto img-fluid"
                  src="img/products/saxophone.png" alt="" />
             <p class="title">Alto Saxophone</p>
             <div class="overlay"></div>
             <div class="button"><a href="#"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img mx-auto"
+            <img class="card-img mx-auto img-fluid"
                  src="img/products/triangle.png" alt="" />
             <p class="title">Triangle</p>
             <div class="overlay"></div>
@@ -267,35 +267,35 @@
     <h2>Electronics</h2>
     <div class="slider center">
         <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img mx-auto"
+            <img class="card-img mx-auto img-fluid"
                  src="img/products/laptop.png" alt="" />
             <p class="title">Razer Laptop</p>
             <div class="overlay"></div>
             <div class="button"><a href="#"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img mx-auto"
+            <img class="card-img mx-auto img-fluid"
                  src="img/products/headphones.png" alt="" />
             <p class="title">Headphones</p>
             <div class="overlay"></div>
             <div class="button"><a href="#"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img mx-auto"
+            <img class="card-img mx-auto img-fluid"
                  src="img/products/ipod.png" alt="" />
             <p class="title">iPod Mini</p>
             <div class="overlay"></div>
             <div class="button"><a href="#"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img-wide pt-5"
+            <img class="card-img-wide pt-5 img-fluid"
                  src="img/products/mouse.png" alt="" />
             <p class="title">Gaming Mouse</p>
             <div class="overlay"></div>
             <div class="button"><a href="#"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
-            <img class="card-img img-fluid"
+            <img class="card-img img-fluid img-fluid"
                  src="img/products/tv.webp" alt="" />
             <p class="title">4K HD Television</p>
             <div class="overlay"></div>
