--- a/css/groceries.css
+++ b/css/groceries.css
@@ -1,28 +1,10 @@
 body {
   background-image: linear-gradient(white, #f8ceff);
   font-family: 'Fira Sans', sans-serif;
-  position: relative;
-}
-
-.groceries-img {
-  width: 100%;
-}
-
-.category {
-  background-image: url("../img/groceries.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 50vh;
 }
 
 .text-shadow {
   text-shadow: 4px 4px 4px #aaa;
-}
-
-/*Jumbotron*/
-.bg-jumbo{
-  background-color: rgba(230, 230, 230, 0.75);
-  padding: 10px;
 }
 
 /* Kevin's Stuff */
@@ -47,6 +29,10 @@ body {
 .nav-link {
   color: white !important;
   font-weight: bold;
+}
+
+.navbar {
+  height: 61px;
 }
 
 /* edited bootstrap code */
@@ -89,97 +75,48 @@ body {
   border-color: rgb(232, 29, 99);
 }
 
-/* Parallax */
-
-.parallax {
-  height: 500px; /* fallback for older browsers */
-  height: 100vh;
-  overflow-x: hidden;
-  overflow-y: auto;
-  -webkit-perspective: 300px;
-  perspective: 300px;
-}
-
-.parallax__group {
+/* Groceries Stuff */
+.main-img {
+  background-image: url("../img/grocery.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
   position: relative;
-  height: 500px; /* fallback for older browsers */
-  height: 100vh;
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
+  height: 50vh;
 }
 
-.parallax__layer {
+.main-title {
   position: absolute;
-  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 40%;
+  color: white;
+  background-image: linear-gradient(to right, rgba(26, 26, 26, 0.5), rgba(255, 255, 255, 0));
+}
+
+.product-img {
+  height: 150px;
+}
+
+.product-card {
+  height: 425px;
+  padding: 20px;
+  margin: 10px;
+  border-color: black;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 15px 50px 30px 5px;
+  background-color: white;
+}
+
+.cart-info {
+  position: absolute;
   left: 0;
   right: 0;
-  bottom: 0;
+  bottom: 25px;
 }
 
-.parallax__layer--fore {
-  -webkit-transform: translateZ(90px) scale(.7);
-  transform: translateZ(90px) scale(.7);
-  z-index: 1;
-}
-
-.parallax__layer--base {
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  z-index: 4;
-}
-
-.parallax__layer--back {
-  -webkit-transform: translateZ(-300px) scale(2);
-  transform: translateZ(-300px) scale(2);
-  z-index: 3;
-}
-
-.parallax__layer--deep {
-  -webkit-transform: translateZ(-600px) scale(3);
-  transform: translateZ(-600px) scale(3);
-  z-index: 2;
-}
-
-body, html {
-  overflow: hidden;
-}
-
-/* centre the content in the parallax layers */
-.parallax-title {
-  text-align: center;
-  position: absolute;
-  font-size: 5rem;
-  color: white;
-  background-color: rgba(230, 230, 230, 0.75);
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-}
-
-/* style the groups
---------------------------------------------- */
-
-#group1 {
-  z-index: 5; /* slide over group 2 */
-  height: 150vh;
-}
-#group1 .parallax__layer--base {
-  background-image: linear-gradient(white, #f8ceff);
-}
-
-#group2 {
-  z-index: 3; /* slide under groups 1 and 3 */
-}
-#group2 .parallax__layer--back {
-  background-image: linear-gradient(white, #f8ceff);
-  position: relative;
-  float: left;
-}
-
-#group7 {
-  z-index: 3; /* slide over group 7 */
-}
-#group7 .parallax__layer--base {
-  background-image: linear-gradient(white, #f8ceff);
+.img-fit {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
 }
