--- a/landing.hbs
+++ b/landing.hbs
@@ -18,7 +18,7 @@
 {{> fakeNavBar }}
 <!--Real Nav Bar-->
 <nav class="navbar navbar-expand-lg navbar-light navbg pt-0">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="landing.hbs">
         <img src="img/nozamALogo2.png" width="100" height="35" alt="nozamA logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
