--- a/groceries.hbs
+++ b/groceries.hbs
@@ -16,40 +16,10 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bottomblur">
-        <a class="navbar-brand" href="#">
-            <img src="img/nozamALogo2.png" width="70" height="30" alt="nozamA logo">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown">Categories</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Electronics</a>
-                        <a class="dropdown-item" href="#">Groceries</a>
-                        <a class="dropdown-item" href="#">Musical Instruments</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Today's Deals</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a href="#" class="nav-link" data-toggle="modal" data-target="#login">Login</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Register</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+    {{>fakeNavBar}}
     <!--Real Nav Bar-->
     <nav class="navbar navbar-expand-lg navbar-light navbg pt-0">
-        <a class="navbar-brand" href="landing.html">
+        <a class="navbar-brand" href="http://localhost:8080/">
             <img src="img/nozamALogo2.png" width="100" height="35" alt="nozamA logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
@@ -71,9 +41,7 @@
             </ul>
             <ul class="navbar-nav ml-auto">
                 {{{ cartLink }}}
-                <li class="nav-item" id="loginbutton">
-                    <a href="#" class="nav-link" data-toggle="modal" data-target="#login">Login</a>
-                </li>
+                {{{ loginlogoutButton }}}
                 <li class="nav-item" id="registerbutton">
                     <a href="#" class="nav-link" data-toggle="modal" data-target="#signup">Sign Up</a>
                 </li>
@@ -90,7 +58,7 @@
                         &times;
                     </button>
                 </div>
-                <form method="post" action="/login">
+                <form method="post" action="/login" id="login_form">
                     <div class="modal-body">
                         <div class="form-group">
                             <label for="username">Username</label>
@@ -100,6 +68,11 @@
                             <label for="loginpassword">Password</label>
                             <input name="password" type="password" class="form-control" id="loginpassword" placeholder="Enter password" required>
                         </div>
+                        <div class="form-group">
+                            <label for="vcode">Code</label>
+                            <input name="vcode" type="text" class="form-control" id="vcode" placeholder="Enter Verification Code" required>
+                        </div>
+                        {{{imgTag}}}
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-light" data-dismiss="modal">
@@ -196,6 +169,7 @@
             </div>
 
         </div>
+        {{{popup}}}
     </div>
 
 <footer class="text-center mt-5">copyright, and stuff</footer>
