Fix landing carousel

--- a/css/electronics.css
+++ b/css/electronics.css
@@ -75,7 +75,7 @@ body {
   border-color: rgb(232, 29, 99);
 }
 
-/* Groceries Stuff */
+/* Electronics Stuff */
 .main-img {
   background-image: url("../img/electronics.jpg");
   background-repeat: no-repeat;
