--- a/landing.hbs
+++ b/landing.hbs
@@ -130,8 +130,7 @@
             <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="img/groceries.png" class="img-fluid" alt="...">
+            <div class="carousel-item img-groceries active">
                 <div class="jumbotron">
                     <div class="col-4 offset-4 bg-jumbo">
                         <h1 class="display-4 title-black text-shadow">nozamA</h1>
@@ -145,7 +144,7 @@
                     </div>
                 </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item img-mother">
                 <img src="img/mother.jpg" class="img-fluid" alt="...">
                 <div class="jumbotron">
                     <div class="col-4 offset-4 bg-jumbo">
@@ -161,7 +160,7 @@
                 </div>
 
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item img-reward">
                 <img src="img/treasure.jpg" class="img-fluid"  alt="...">
                 <div class="jumbotron">
                     <div class="col-4 offset-4 bg-jumbo">
