--- a/landing.hbs
+++ b/landing.hbs
@@ -307,7 +307,7 @@
     </div>
     {{{popup}}}
 </div>
-<footer class="mt-5 footer">copyright, and stuff</footer>
+<footer class="  mt-5 footer">
 <!--Scripts-->
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
