Final Commit for May 7th

--- a/electronics.hbs
+++ b/electronics.hbs
@@ -36,7 +36,7 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Today's Deals</a>
+        <a class="nav-link" href="http://localhost:8080/todays_deals">Today's Deals</a>
       </li>
     </ul>
     <ul class="navbar-nav ml-auto">
