--- a/landing.hbs
+++ b/landing.hbs
@@ -193,35 +193,35 @@
     <div class="slider center">
         <div class="hover-card slick-slide" style="width: 16rem;">
             <img class="card-img mx-auto img-fluid"
-                 src="img/products/chips.png" alt="" />
+                 src="img/products/groceries/chips.png" alt="" />
             <p class="title">Lays Chips</p>
             <div class="overlay"></div>
             <div class="button"><a href="#"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
             <img class="card-img mx-auto img-fluid"
-                 src="img/products/coke.png" alt="" />
+                 src="img/products/groceries/coke.png" alt="" />
             <p class="title">Coca Cola</p>
             <div class="overlay"></div>
             <div class="button"><a href="#"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
             <img class="card-img mx-auto img-fluid"
-                 src="img/products/eggs.png" alt="" />
+                 src="img/products/groceries/eggs.png" alt="" />
             <p class="title">White Eggs</p>
             <div class="overlay"></div>
             <div class="button"><a href="#"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
             <img class="card-img mx-auto img-fluid"
-                 src="img/products/butter.png" alt="" />
+                 src="img/products/groceries/butter.png" alt="" />
             <p class="title">Butter</p>
             <div class="overlay"></div>
             <div class="button"><a href="#"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
             <img class="card-img mx-auto img-fluid"
-                 src="img/products/steak.png" alt="" />
+                 src="img/products/groceries/steak.png" alt="" />
             <p class="title">Kobe Steak</p>
             <div class="overlay"></div>
             <div class="button"><a href="#"> View Details </a></div>
@@ -232,35 +232,35 @@
     <div class="slider center">
         <div class="hover-card slick-slide" style="width: 16rem;">
             <img class="card-img-wide pt-5 img-fluid"
-                 src="img/products/guitar.png" alt="" />
+                 src="img/products/instruments/guitar.png" alt="" />
             <p class="title">Electric Guitar</p>
             <div class="overlay"></div>
             <div class="button"><a href="#"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
             <img class="card-img mx-auto img-fluid"
-                 src="img/products/clarinet.png" alt="" />
+                 src="img/products/instruments/clarinet.png" alt="" />
             <p class="title">Clarinet</p>
             <div class="overlay"></div>
             <div class="button"><a href="#"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
             <img class="card-img mx-auto img-fluid"
-                 src="img/products/saxophone.png" alt="" />
+                 src="img/products/instruments/saxophone.png" alt="" />
             <p class="title">Alto Saxophone</p>
             <div class="overlay"></div>
             <div class="button"><a href="#"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
             <img class="card-img mx-auto img-fluid"
-                 src="img/products/triangle.png" alt="" />
+                 src="img/products/instruments/triangle.png" alt="" />
             <p class="title">Triangle</p>
             <div class="overlay"></div>
             <div class="button"><a href="#"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
             <img class="card-img-wide pt-5"
-                 src="img/products/piano.png" alt="" />
+                 src="img/products/instruments/piano.png" alt="" />
             <p class="title">Piano</p>
             <div class="overlay"></div>
             <div class="button"><a href="#"> View Details </a></div>
@@ -270,35 +270,35 @@
     <div class="slider center">
         <div class="hover-card slick-slide" style="width: 16rem;">
             <img class="card-img mx-auto img-fluid"
-                 src="img/products/laptop.png" alt="" />
+                 src="img/products/electronics/laptop.png" alt="" />
             <p class="title">Razer Laptop</p>
             <div class="overlay"></div>
             <div class="button"><a href="#"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
             <img class="card-img mx-auto img-fluid"
-                 src="img/products/headphones.png" alt="" />
+                 src="img/products/electronics/headphones.png" alt="" />
             <p class="title">Headphones</p>
             <div class="overlay"></div>
             <div class="button"><a href="#"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
             <img class="card-img mx-auto img-fluid"
-                 src="img/products/ipod.png" alt="" />
+                 src="img/products/electronics/ipod.png" alt="" />
             <p class="title">iPod Mini</p>
             <div class="overlay"></div>
             <div class="button"><a href="#"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
             <img class="card-img-wide pt-5 img-fluid"
-                 src="img/products/mouse.png" alt="" />
+                 src="img/products/electronics/mouse.png" alt="" />
             <p class="title">Gaming Mouse</p>
             <div class="overlay"></div>
             <div class="button"><a href="#"> View Details </a></div>
         </div>
         <div class="hover-card slick-slide" style="width: 16rem;">
             <img class="card-img img-fluid img-fluid"
-                 src="img/products/tv.webp" alt="" />
+                 src="img/products/electronics/tv.webp" alt="" />
             <p class="title">4K HD Television</p>
             <div class="overlay"></div>
             <div class="button"><a href="#"> View Details </a></div>
