--- a/groceries.hbs
+++ b/groceries.hbs
@@ -138,7 +138,7 @@
                     <p class="card-text">{{this.description}}</p>
                     <div class="cart-info">
                         <h3>${{this.price}}</h3>
-                        <a href="#" class="btn btn-primary">Add to Cart</a>
+                        <a href="/add_cart/{{this.id}}" class="btn btn-primary">Add to Cart</a>
                     </div>
                 </div>
             </div>
