--- a/todays_deals.hbs
+++ b/todays_deals.hbs
@@ -13,7 +13,7 @@
 {{> fakeNavBar }}
 <!--Real Nav Bar-->
 <nav class="navbar navbar-expand-lg navbar-light navbg pt-0">
-    <a class="navbar-brand" href="landing.hbs">
+    <a class="navbar-brand" href="http://localhost:8080/">
         <img src="img/nozamALogo2.png" width="100" height="35" alt="nozamA logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
