Fix Footer and overlay::hover

--- a/css/electronics.css
+++ b/css/electronics.css
@@ -159,7 +159,7 @@ body {
 }
 
 /* The Overlay (background) */
-.overlay {
+.footer-overlay {
   /* Height & width depends on how you want to reveal the overlay (see JS below) */
   height: 100%;
   width: 0;
@@ -183,7 +183,7 @@ body {
 }
 
 /* The navigation links inside the overlay */
-.overlay a {
+.footer-overlay a {
   padding: 8px;
   text-decoration: none;
   font-size: 36px;
@@ -194,12 +194,12 @@ body {
 }
 
 /* When you mouse over the navigation links, change their color */
-.overlay a:hover, .overlay a:focus {
+.footer-overlay a:hover, .footer-overlay a:focus {
   color: #f1f1f1;
 }
 
 /* Position the close button (top right corner) */
-.overlay .closebtn {
+.footer-overlay .closebtn {
   position: absolute;
   top: 20px;
   right: 45px;
@@ -209,8 +209,8 @@ body {
 
 /* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
 @media screen and (max-height: 450px) {
-  .overlay a {font-size: 20px}
-  .overlay .closebtn {
+  .footer-overlay a {font-size: 20px}
+  .footer-overlay .closebtn {
     font-size: 40px;
     top: 15px;
     right: 35px;
