--- a/instruments.hbs
+++ b/instruments.hbs
@@ -161,7 +161,7 @@
 <footer class="  mt-5 footer">
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <!-- The overlay -->
-    <div id="myFooter" class="overlay">
+    <div id="myFooter" class="footer-overlay">
 
         <!-- Button to close the overlay navigation -->
         <a href="javascript:void(0)" class="closebtn" onclick="closeFooter()">&times;</a>
