--- a/groceries.hbs
+++ b/groceries.hbs
@@ -151,7 +151,7 @@
                     <p class="card-text">{{this.description}}</p>
                     <div class="cart-info">
                         <h3>${{this.price}}</h3>
-                        <a href="/add_cart/{{this.id}}" class="btn btn-pink">Add to Cart</a>
+                        <a href="/add_cart/{{this.id}}" class="btn btn-primary">Add to Cart</a>
                     </div>
                 </div>
             </div>
@@ -163,8 +163,7 @@
 <footer class="mt-5 footer">
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <!-- The overlay -->
-    <div id="myFooter" class="footer-overlay">
-
+    <div id="myFooter" class="footeroverlay">
 
         <!-- Button to close the overlay navigation -->
         <a href="javascript:void(0)" class="closebtn" onclick="closeFooter()">&times;</a>
