--- a/instruments.hbs
+++ b/instruments.hbs
@@ -163,9 +163,7 @@
 <footer class="mt-5 footer">
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <!-- The overlay -->
-
-    <div id="myFooter" class="footer-overlay">
-
+    <div id="myFooter" class="footeroverlay">
 
         <!-- Button to close the overlay navigation -->
         <a href="javascript:void(0)" class="closebtn" onclick="closeFooter()">&times;</a>
