--- a/todays_deals.hbs
+++ b/todays_deals.hbs
@@ -117,10 +117,9 @@
         </div>
     </div>
 </div>
-
+<div class="container">
 <div class="card">
   <div class="card-body">
-    <div class="jumbotron mt-5">
       <h1 class="display-4">Deal of the Day!</h1>
       <hr class="my-4">
       <div id="test1">
@@ -135,6 +134,7 @@
     </div>
   </div>
 </div>
+</div
 {{{popup}}}
 <footer class="mt-5 footer">
   <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
