--- a/cart.hbs
+++ b/cart.hbs
@@ -1,10 +1,269 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <!-- Bootstrap core CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
+        integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+  <link rel="stylesheet" href="css/cart.css">
+  <link rel="icon" href="img/HatLogo.png">
+  <title>nozamA - My Cart</title>
 </head>
+
 <body>
-<p>Cart Page</p>
+{{> fakeNavBar }}
+<!--Real Nav Bar-->
+<nav class="navbar navbar-expand-lg navbar-light navbg pt-0">
+  <a class="navbar-brand" href="http://localhost:8080/">
+    <img src="img/nozamALogo2.png" width="100" height="35" alt="nozamA logo">
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse mt-3" id="navbar">
+    <ul class="navbar-nav">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown">Categories</a>
+        <div class="dropdown-menu dropmenu">
+          <a href="http://localhost:8080/electronics" class="dropdown-item">Electronics</a>
+          <a href="http://localhost:8080/groceries" class="dropdown-item">Groceries</a>
+          <a href="http://localhost:8080/instruments" class="dropdown-item">Musical Instruments</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="http://localhost:8080/todays_deals">Today's Deals</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav ml-auto">
+      {{{ cartLink }}}
+      {{{ loginlogoutButton }}}
+      <li class="nav-item" id="registerbutton">
+        <a href="#" class="nav-link" data-toggle="modal" data-target="#signup">Sign Up</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<div class="modal fade" id="login">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Login</h5>
+        <button type="button" class="close" data-dismiss="modal">
+          &times;
+        </button>
+      </div>
+      <form method="post" action="/login" id="login_form">
+        <div class="modal-body">
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input name="username" type="text" class="form-control" id="username" placeholder="Enter Username" required>
+          </div>
+          <div class="form-group">
+            <label for="loginpassword">Password</label>
+            <input name="password" type="password" class="form-control" id="loginpassword" placeholder="Enter password" required>
+          </div>
+          <div class="form-group">
+            <label for="vcode">Code</label>
+            <input name="vcode" type="text" class="form-control" id="vcode" placeholder="Enter Verification Code" required>
+          </div>
+          {{{imgTag}}}
+          <p>Click To Change!</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-light" data-dismiss="modal">
+            Cancel
+          </button>
+          <button onclick="form_submit1()" value="Submit" class="btn btn-pink">Login</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="signup">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Sign Up</h5>
+        <button type="button" class="close" data-dismiss="modal">
+          &times;
+        </button>
+      </div>
+      <form method="post" action="/register" id="register">
+        <div class="modal-body">
+          <div class="form-group">
+            <label for="registeruser">Username</label>
+            <input name="username" type="text" minlength="6" class="form-control" id="registeruser" placeholder="Enter Username" required>
+          </div>
+          <div class="form-group">
+            <label for="registerpassword">Password</label>
+            <div class="input-group">
+              <input name="password" type="password" minlength="7" class="form-control" id="registerpassword" placeholder="Enter password" required
+                     onKeyUp="CheckIntensity(this.value)">
+              <div class="input-group-append">
+                                <span class="input-group-text">
+                                  <i class="fa fa-eye-slash" id="eye" role="button" onclick="reveal()"></i>
+                                </span>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <table border="0" cellpadding="0" cellspacing="0" style="transform:translateY(8px);">
+              <tr align="center">
+                <td id="pwd_Weak" class="pwd pwd_c"> </td>
+                <td id="pwd_Medium" class="pwd pwd_c pwd_f">NULL</td>
+                <td id="pwd_Strong" class="pwd pwd_c pwd_c_r"> </td>
+              </tr>
+            </table>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-light" data-dismiss="modal">
+            Cancel
+          </button>
+          <button onclick="form_submit()" value="Submit" class="btn btn-pink">Register</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+<div class="main-img">
+  <h1 class="main-title mb-0 pt-5">My Shopping Cart</h1>
+</div>
+<div class="cart-item col-10 offset-1 mt-3 row">
+  <div class="col-2">
+    <img src="img/products/electronics/laptop.png" class="img-fit cart-img" alt="cart item image">
+  </div>
+  <div class="col-7 my-auto">
+    <h2 class="my-auto">Razor Laptop</h2>
+  </div>
+  <div class="col-3 my-auto">
+    <form class="form-inline my-auto my-auto pull-right">
+      <p class="my-auto">quantity</p>
+      <label class="my-1 mr-2" for="item1"></label>
+      <select class="custom-select my-1 mr-sm-2" id="item1">
+        <option value="1" selected>1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+      </select>
+
+      <div>
+        <p class="my-auto">&times; $4.99</p>
+      </div>
+
+    </form>
+  </div>
+
+</div>
+<div class="row">
+  <div class="col-6 offset-1 mt-4">
+    <table class="table">
+      <tr>
+        <th>Sub Total:</th>
+        <td>$3467563.00</td>
+      </tr>
+      <tr>
+        <th>Tax:</th>
+        <td>$27we7r98w7er897w972</td>
+      </tr>
+      <tr>
+        <th>Total:</th>
+        <td>28937wuy3984y934y8qt3</td>
+      </tr>
+    </table>
+  </div>
+  <div class="col-4" style="position: relative;">
+    <a class="btn btn-pink btn-md checkout-button" href="#">Checkout</a>
+  </div>
+</div>
+
+<footer class="  mt-5 footer">
+  <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+  <!-- The overlay -->
+  <div id="myFooter" class="footer-overlay">
+    <!-- Button to close the overlay navigation -->
+    <a href="javascript:void(0)" class="closebtn" onclick="closeFooter()">&times;</a>
+    <!-- Overlay content -->
+    <div class="overlay-content">
+      <a href="#">About Us</a>
+      <a href="#">Services</a>
+      <a href="#">Join Us</a>
+      <a href="#">Contact Us</a>
+    </div>
+  </div>
+  <!-- Use any element to open/show the overlay navigation menu -->
+  <button onclick="openFooter()" id="open">Info</button>
+</footer>
+<!--Scripts-->
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="slick/slick.min.js"></script>
+
+<script src="landing.js"></script>
+
+<script src="https://unpkg.com/simplebar@latest/dist/simplebar.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script>
+  function CheckIntensity(pwd) {
+    var Mcolor, Wcolor, Scolor, Color_Html;
+    var m = 0;
+    if (pwd.length == 0) {
+      m = 0;
+    } else if (pwd.length <= 3) {
+      m = 1;
+    } else if (pwd.length <= 6) {
+      m = 2;
+    } else {
+      m = 3;
+    }
+
+    switch (m) {
+      case 1:
+        Wcolor = "pwd pwd_Weak_c";
+        Mcolor = "pwd pwd_c";
+        Scolor = "pwd pwd_c pwd_c_r";
+        Color_Html = "Weak";
+        break;
+      case 2:
+        Wcolor = "pwd pwd_Medium_c";
+        Mcolor = "pwd pwd_Medium_c";
+        Scolor = "pwd pwd_c pwd_c_r";
+        Color_Html = "Medium";
+        break;
+      case 3:
+        Wcolor = "pwd pwd_Strong_c";
+        Mcolor = "pwd pwd_Strong_c";
+        Scolor = "pwd pwd_Strong_c pwd_Strong_c_r";
+        Color_Html = "Strong";
+        break;
+      default:
+        Wcolor = "pwd pwd_c";
+        Mcolor = "pwd pwd_c pwd_f";
+        Scolor = "pwd pwd_c pwd_c_r";
+        Color_Html = "NULL";
+        break;
+    }
+    document.getElementById('pwd_Weak').className = Wcolor;
+    document.getElementById('pwd_Medium').className = Mcolor;
+    document.getElementById('pwd_Strong').className = Scolor;
+    document.getElementById('pwd_Medium').innerHTML = Color_Html;
+  }
+</script>
+<script>
+  $("#captchapng").click(function(){
+    $("#captchapng").attr('src',`/vcode?randomId=${Math.random()}`)
+  });
+</script>
 </body>
 </html>
