I DID THE QTY AND CART STUFF GO PLAY WITH IT

--- a/cart.hbs
+++ b/cart.hbs
@@ -137,47 +137,46 @@
 <div class="main-img">
   <h1 class="main-title mb-0 pt-5">My Shopping Cart</h1>
 </div>
+{{# each items}}
 <div class="cart-item col-10 offset-1 mt-3 row">
   <div class="col-2">
-    <img src="img/products/electronics/laptop.png" class="img-fit cart-img" alt="cart item image">
+      {{{this.cartImg}}}
   </div>
   <div class="col-7 my-auto">
-    <h2 class="my-auto">Razor Laptop</h2>
+    <h2 class="my-auto">{{this.title}}</h2>
   </div>
   <div class="col-3 my-auto">
-    <form class="form-inline my-auto my-auto pull-right">
+    <form method="post" class="form-inline my-auto my-auto pull-right" action="/update_cart" >
       <p class="my-auto">quantity</p>
-      <label class="my-1 mr-2" for="item1"></label>
-      <select class="custom-select my-1 mr-sm-2" id="item1">
-        <option value="1" selected>1</option>
-        <option value="2">2</option>
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5">5</option>
-      </select>
-
+      <label class="my-1 mr-2" for="{{this.id}}"></label>
+        <input type="number" max="5" min="1" name="qty" value="{{this.qty}}" id="{{this.id}}" maxlength="1">
+        <input type="hidden" name="{{this.id}}" value="3487">
       <div>
-        <p class="my-auto">&times; $4.99</p>
+        <p class="my-auto">&times; ${{this.price}}</p>
       </div>
-
+        <div class="col-4" style="position: relative;">
+            <label>
+                <input class="btn btn-pink btn-md update-button" value="Update Cart" type="submit">
+            </label>
+        </div>
     </form>
   </div>
-
 </div>
+{{/each}}
 <div class="row">
   <div class="col-6 offset-1 mt-4">
     <table class="table">
       <tr>
         <th>Sub Total:</th>
-        <td>$3467563.00</td>
+        <td>${{sub_total}}</td>
       </tr>
       <tr>
         <th>Tax:</th>
-        <td>$27we7r98w7er897w972</td>
+        <td>${{tax}}</td>
       </tr>
       <tr>
         <th>Total:</th>
-        <td>28937wuy3984y934y8qt3</td>
+        <td>${{total}}</td>
       </tr>
     </table>
   </div>
